syntax = "proto3";

option go_package = "github.com/aserto-dev/aserto-idp/pkg/proto;proto";

package proto;

import "aserto/api/v1/connection.proto";
import "aserto/common/info/v1/info.proto";
import "aserto/api/v1/user.proto";
import "google/protobuf/struct.proto";
import "google/rpc/status.proto";

message InfoRequest {
}

message InfoResponse {    
    aserto.common.info.v1.BuildInfo build = 1;
    string description = 2;
    repeated aserto.api.v1.ConfigElement configs = 3;
}

message ImportRequest{
    oneof data {
        google.protobuf.Struct config=1;
        User user = 2;
      }
}

message User{
  oneof data {
    aserto.api.v1.User user = 1;
    aserto.api.v1.UserExt user_ext = 2;
  }
}

message ImportResponse{
  google.rpc.Status error = 1;
}

message ExportRequest{
  google.protobuf.Struct config=1;
}

message ExportResponse{
    oneof data {
        User user = 2;
        google.rpc.Status error = 3;
      }
}

message DeleteRequest{
    oneof data {
        google.protobuf.Struct config=1;
        User user = 2;
      }
}

message DeleteResponse{
  google.rpc.Status error = 1;
}

message ValidateRequest{
    google.protobuf.Struct config=1;
}

message ValidateResponse{
    google.rpc.Status status = 1;
}

service Plugin {
    rpc Info(InfoRequest) returns (InfoResponse);
    rpc Import(stream ImportRequest) returns (stream ImportResponse);
    rpc Export(ExportRequest) returns (stream ExportResponse);
    rpc Delete(stream DeleteRequest) returns (stream DeleteResponse);
    rpc Validate(ValidateRequest) returns (ValidateResponse);
}
